Images and spacing

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-hello world
-<img src="images/VPC_Management_Console.jpg">
+
+<html>
+<head>
+	<title>Setup AWS and EC2</title>
+</head>
+<body>
+<h2>Setup AWS and EC2</h2>
+
+<p>AWS GovCloud is a region under your AWS Account<br />
+Go to:<br />
+VPS Dashboard and clink on VPC Wizard.<br />
+<img alt="" src="images/VPC_Management_Console.jpg" style="width: 200px; border-width: 1px; border-style: solid; margin: 5px;" /><br />
+&nbsp;</p>
