--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <p>AWS GovCloud is a region under your AWS Account<br />
 Go to:<br />
-VPS Dashboard and clink on VPC Wizard.<br />
-<img alt="" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 1px; border-style: solid; margin: 5px;" /><br />
+VPS Dashboard and click on VPC Wizard.<br />
+<img alt="" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 &nbsp;</p>
+
+On the next page, click on: VPC with Public and Private Subnets.
+
+<img alt="" src="images/VPC_Management_Console_Subnets.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
+&nbsp;</p>
+
