--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
+<p>Setting Up AWS GovCloud for this series</p>
 
-<html>
-<head>
-	<title>Setup AWS and EC2</title>
-</head>
-<body>
-<h2>Setup AWS and EC2</h2>
-
-<p>AWS GovCloud is a region under your AWS Account<br />
-Go to:<br />
-VPS Dashboard and click on VPC Wizard.<br />
+<p>SET UP VPC AND SUBNET&nbsp;<br />
+Create VPC<br />
+Login to your GovCloud account. &nbsp;<br />
+Navigate to:&nbsp;<br />
+Services -&gt; Amazon Web Services -&gt; Networking -&gt; VPC -&gt; Start VPC Wizard<br />
+<img alt="AWS VPC Management Console" data-align="left" data-entity-type="file" data-entity-uuid="c827bc1f-dc82-4612-9999-1ac867248795" src="/sites/default/files/inline-images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 <img alt="" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 &nbsp;</p>
-<br>
-On the next page, click on: VPC with Public and Private Subnets.
 
-<img alt="" src="images/VPC_Management_Console_Subnets.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
-&nbsp;</p>
-<br>
+<p>Image<br />
+Create<br />
+EBS 20 GB encrypted fs<br />
+Security group<br />
+SSH KeyPair&nbsp;<br />
+Firewall rules 22, 80 443</p>
+
+<p>&nbsp;</p>
