--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Login to your GovCloud account. &nbsp;<br />
 Navigate to:&nbsp;<br />
 Services -&gt; Amazon Web Services -&gt; Networking -&gt; VPC -&gt; Start VPC Wizard<br />
 <img alt="AWS VPC Management Console" data-align="left" data-entity-type="file" data-entity-uuid="c827bc1f-dc82-4612-9999-1ac867248795" src="/sites/default/files/inline-images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
-<img alt="" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
+<img alt="AWS VPC & Subnet Management Console" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 &nbsp;</p>
 
 <p>Image<br />
