--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@ Login to your GovCloud account. &nbsp;<br />
 Navigate to:&nbsp;<br />
 Services -&gt; Amazon Web Services -&gt; Networking -&gt; VPC -&gt; Start VPC Wizard<br />
 
-<img alt="AWS VPC Management Console" data-align="left" data-entity-type="file" src="images/VPC_Management_Console.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
+<img alt="AWS VPC Management Console" data-align="left" data-entity-type="file" src="images/VPC_Management_Console.jpg" style="width: 500px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 
-<img alt="AWS VPC & Subnet Management Console" data-align="left" data-entity-type="file" src="images/VPC_Management_Console_Subnets.jpg" style="width: 400px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
+Step 1: Select a VPC Configuration
+Select Option 2: 
+"VPC with Public and Private Subnets" We will set up our EC2 RHEL server on the Public Subnet, and our RDS on the Private Subnet.  Note:  This set up is for demonstration only; the authors do not warrant that this is a secure configuration.
+
+<img alt="AWS VPC & Subnet Management Console" data-align="left" data-entity-type="file" src="images/VPC_Management_Console_Subnets.jpg" style="width: 500px; border-width: 0px; border-style: solid; margin: 5px;" /><br />
 &nbsp;</p>
 
 
